# Neutral-Current-Detectors-project-2025-

./: README.md
GEANT4_NCD/NCD_(Bare,1,2,3_poly)/NCD_bare/: CMakeLists.txt  README.txt
GEANT4_NCD/NCD_(Bare,1,2,3_poly)/NCD_bare/include/: MyEventAction.hh
GEANT4_NCD/NCD_(Bare,1,2,3_poly)/NCD_bare/src/: DetectorConstruction.cc  HadronElasticPhysicsHP.cc  MyStackingAction.cc  MySteppingAction.cc  Run.cc
GEANT4_NCD/NCD_(Bare,1,2,3_poly)/NCD_first_setup/: CMakeLists.txt  NCD.cc  README.txt
GEANT4_NCD/NCD_(Bare,1,2,3_poly)/NCD_first_setup/src/: Action.cc  DetectorConstruction.cc  Run.cc
GEANT4_NCD/NCD_(Bare,1,2,3_poly)/NCD_second_setup/: README.txt
GEANT4_NCD/NCD_(Bare,1,2,3_poly)/NCD_second_setup/include/: MySteppingAction.hh  PrimaryGeneratorAction.hh
GEANT4_NCD/NCD_(Bare,1,2,3_poly)/NCD_third_setup/: README.txt
GEANT4_NCD/NCD_General/: FluxNeutrons.mac  NCD.cc  ThermalNeutrons.mac
GEANT4_NCD/NCD_General/include/: NCDGeometry.hh  PrimaryGeneratorAction.hh
GEANT4_NCD/NCD_General/src/: Action.cc  Detector.cc  DetectorConstruction.cc  MyStackingAction.cc  MySteppingAction.cc  Run.cc
NCD Literatures/Unfolding/: S1350448712003575.htm
NCD_PYTHON/Neutron_deconvolution_algortihms/: 3NCD_Response_32_Nibi.xlsx  Read_Response.py  Rebin.py  Rebinned_HGResponseMatrix_3x3_Error.csv  Rebinned_HGResponseMatrix_4x4_Error.csv  execute.py  gravel.py  mlem.py
NCD_PYTHON/Plotting/Triton Effective Attenuated Efficiency/: Plot.py  TripleNCDResponseErrors.csv
Neutron_deconvolution_algortihms/: 3NCD_Response_32_Nibi.csv  Image_Unfolding.py  Rebinned_HGResponseMatrix_3x3.csv  Rebinned_HGResponseMatrix_4x4.csv
Plotting/ROOT/: UPROOT.py
Plotting/Triton Effective Attenuated Efficiency/: TripleNCDResponse.csv  TripleNCDResponse.xlsx
Thermal flux calculation/: ThermalFlux.py
(+11 files in other folders)
